components/Products.module.scss
@use '@/app/base';

.content {
	display: flex;
	flex-direction: column;
	align-items: center;

	h3,
	.stylizedTitle {
		margin-bottom: 4rem;
	}
}

.productsContainer {
	display: flex;
	width: 100%;
	// gap: 2rem;
	align-items: flex-start;
	position: relative;
}

.products {
	display: grid;
	grid-template-columns: repeat(12, 1fr);
	flex-grow: 1;
}
.gap {
	column-gap: 0.3rem;
	row-gap: 0.5rem;
}

.product,
.productNoGap {
	display: flex;
	flex-direction: column;
	grid-column: span 3;

	.image {
		aspect-ratio: 1 / 1.25;
	}

	a {
		width: 100%;
	}
}

.image {
	width: 100%;
	position: relative;
	overflow: hidden;

	img {
		transition: 0.3s ease-in;
	}
}

.hoverImage {
	opacity: 0;
}

.image:hover {
	img {
		transform: scale(110%);
	}

	.hoverImage {
		opacity: 1;
	}
}

.productInfo {
	padding: 1rem;
	display: flex;
	align-items: flex-start;
}

.productTitleContainer {
	width: 70%;
}

.productTitle {
	font-weight: 600;
}

.price {
}

.typeIcons {
	padding-top: 0.4rem;
	width: 30%;
	display: flex;
	justify-content: flex-end;
	gap: 0.5rem;
	flex-wrap: wrap;
}

.typeIcon {
	position: relative;
	width: 0.7rem;
	aspect-ratio: 1 /1;
}

.discount {
	color: base.$red;
}

.floatingTitle {
	position: absolute;
	bottom: 0;
	width: 100%;
	text-align: center;
	color: white;
	font-size: 1rem;
	padding: 2rem;

	span {
		color: white;
		font-weight: 600;
	}
}

.showFiltersButton {
	min-width: 15rem;
	width: fit-content;
	max-width: 90vw;
	padding: 0.6rem 3rem;
	// border-radius: 5px;
	transition: 0.3s;
	border: 1px solid base.$black;
	background-color: transparent;
	cursor: pointer;
	display: flex;
	gap: 0.5rem;
	align-items: center;
	align-self: flex-end;
	margin-bottom: 1rem;

	p {
		font-size: 0.7rem;
		font-weight: 500;
		text-transform: uppercase;
		letter-spacing: 0.35em;
		text-align: center;
		color: base.$black;
	}
}

.showFiltersButton:hover {
	background-color: base.$black;

	p {
		color: white;
	}
}

.individualTitle {
	position: absolute;
	bottom: 2rem;
	width: 100%;
	text-align: center;
	padding: 0 1rem;
	color: white;

	span {
		color: white;
		font-weight: 600;
	}
}

@media screen and (max-width: 1024px) {
	.product {
		grid-column: span 6;
		max-width: 90vw;
	}

	.productNoGap {
		grid-column: span 6;
	}
}

@media screen and (max-width: 768px) {
	.product {
		grid-column: span 12;
		max-width: 90vw;

		.image {
			aspect-ratio: 1 / 1;
		}
	}

	.productNoGap {
		grid-column: span 12;

		.image {
			aspect-ratio: 1 / 1;
		}
	}

	.showFiltersButton {
		align-self: center;
	}
}

